# easy-codex-mcp

./: README.md  pyproject.toml
src/easy_codex/: server.py
src/easy_codex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_easy_codex.py
